--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "elemental": "^0.5.3",
-    "flux": "^2.1.1",
     "react": "^0.14.1",
     "react-addons-css-transition-group": "^0.14.1",
     "react-dom": "^0.14.1",
+    "reduxette": "^0.1.1",
     "romaji": "^0.2.21"
   }
 }
